@@ -487,6 +487,7 @@ Truida Wiedijk
 Gerry Wiener
 Bryce "Zooko" Wilcox-O'Hearn
 Gerald S. Williams
+John Williams
 Sue Williams
 Frank Willison
 Greg V. Wilson
